# CameraFTP

./: .gitattributes  .gitignore  .ignore  AGENTS.md  ANDROID_QUICKSTART.md  ANDROID_SETUP.md  ARCHITECTURE.md  CHANGELOG.md  CHEATSHEET.md  CONTRIBUTING.md  Docs.md  LICENSE  README.md  SETUP.md  build-android.sh  build-full.sh  build-windows-bundle.sh  build-windows.bat  build-windows.sh  build.sh  index.html  opencode.json  package-lock.json  package.json  preview-progress-bar.html  test-pasv-ports.md  vite.config.ts
bindings/: AiEditProgressEvent.ts  AndroidImageOpenMethod.ts  AndroidImageViewerConfig.ts  AppConfig.ts  AuthConfig.ts  ConfigChangedEvent.ts  ExifInfo.ts  FileInfo.ts  ImageOpenMethod.ts  ServerRuntimeView.ts  ServerStartCheckResult.ts  ServerStateSnapshot.ts
docs/: build-migration.md  deferred-refactor-items.md  ftp-migration-plan.md  nn-demosaic-design.md
docs/plans/: 2025-02-18-tauri-rust-crossplatform-design.md  2025-02-18-tauri-rust-implementation-plan.md  2025-02-19-windows-tray-autostart-plan.md  2025-02-20-config-tab-implementation.md  2025-02-21-android-storage-path-customization.md  2025-02-21-android-storage-permission-implementation.md  2025-02-21-android-storage-permission-redesign.md  2025-02-24-code-quality-optimization.md  2025-02-26-windows-auto-preview-design.md  2025-02-27-image-navigation-design.md  2025-02-27-image-navigation-implementation.md  2026-02-23-architecture-refactoring.md  2026-02-23-followup-optimization.md  2026-02-26-codebase-cleanup-design.md  2026-02-26-codebase-cleanup-implementation.md  2026-02-26-comprehensive-cleanup-design.md  2026-02-26-comprehensive-cleanup-impl.md  2026-03-01-code-quality-cleanup-design.md  2026-03-01-code-quality-cleanup.md  2026-03-01-password-hashing-design.md  2026-03-01-password-hashing.md  2026-03-09-android-gallery-design.md  2026-03-09-android-gallery.md  2026-03-09-gallery-multi-select.md  android-manage-external-storage.md
poc/ultrahdr/: batch.sh  diagnose_v2.py  main.py  pyproject.toml
research/: windows-cursor-design-spec.md
scripts/: build-android.sh  build-common.sh  build-frontend.sh  build-raw-alchemy.sh  build-windows.sh  fetch-nn-deps.sh  process_donate_qrcode.py  test-tool-selection.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: !  Cargo.toml  build.rs  mobile.toml  tauri.conf.json  tauri.neural.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bindings/: AdvancedConnectionConfig.ts  AppConfig.ts  AuthConfig.ts  AutoColorGradingConfig.ts  ColorGradingLastUsed.ts  PermissionStatus.ts  PreviewWindowConfig.ts  ServerInfo.ts  ServerStateSnapshot.ts  StorageInfo.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: create_camera_icons.py  create_icons.py  create_lucide_icon.py  generate_green_tray_icon.py  generate_icons.py  generate_tray_icons.py  icon.icns
src-tauri/resources/models/xveon/: README.md  bayer.onnx
src-tauri/src/: commands.rs  config.rs  constants.rs  crypto.rs  error.rs  image_utils.rs  lib.rs  main.rs  network.rs  saf_picker.rs  storage_permission.rs
src-tauri/src/ai_edit/: config.rs  image_processor.rs  mod.rs  progress.rs  service.rs
src-tauri/src/ai_edit/providers/: mod.rs  seededit.rs
src-tauri/src/auto_open/: mod.rs  service.rs  windows.rs
src-tauri/src/color_grading/: ffi.rs  jni_bridge.rs  lensfun_db.rs  lut_data.rs  mod.rs  output.rs  presets.rs  preview.rs  progress.rs  resources.rs  service.rs
src-tauri/src/commands/: ai_edit.rs  color_grading.rs  config.rs  exif.rs  file_index.rs  lut_filter.rs  mod.rs  server.rs  storage.rs
src-tauri/src/crypto/: tls.rs
src-tauri/src/file_index/: mod.rs  service.rs  types.rs  watcher.rs
src-tauri/src/ftp/: error.rs  events.rs  listeners.rs  mod.rs  server.rs  server_factory.rs  server_factory_test.rs  stats.rs  types.rs
src-tauri/src/ftp/android_mediastore/: backend.rs  bridge.rs  limiter.rs  tests.rs  types.rs
src-tauri/src/image_preview/: extract.rs  mod.rs
src-tauri/src/lut_filter/: ffi.rs  lensfun_db.rs  mod.rs  presets.rs  progress.rs  resources.rs  service.rs
src-tauri/src/platform/: android.rs  mod.rs  traits.rs  types.rs  windows.rs
src-tauri/src/utils/: fs.rs  mod.rs
src/bootstrap/: useAppBootstrap.ts
src/components/: AboutCard.tsx  AdvancedConnectionConfig.tsx  AiEditConfigCard.tsx  AiEditConfigPanel.tsx  AiEditProgressBar.tsx  AutoColorGradingConfigCard.tsx  AutoLutConfigCard.tsx  AutoStartToggle.tsx  (+22 more)
(+146 files in other folders)
