[package]
name = "camera-ftp-companion"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "camera_ftp_companion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
# FTP 服务器
libunftp = { version = "0.23.0", default-features = false, features = ["ring"] }
unftp-sbe-fs = "0.4.0"
dashmap = "6.0"
# 类型生成
ts-rs = "10.1"
thiserror = "2.0"
# 网络检测
local-ip-address = "0.6"
