[package]
name = "cameraftp"
version = "1.8.1"
description = "Cross-platform FTP companion for camera photo transfer"
authors = ["GoldJohnKing <GoldJohnKing@Live.cn>"]
repository = "https://github.com/GoldJohnKing/CameraFTP"
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
name = "camera_ftp_companion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
flate2 = "1"
zip = "2"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
flate2 = "1"
# FTP 服务器
libunftp = { version = "0.23.0", default-features = false, features = ["ring"] }
unftp-sbe-fs = "0.4.0"
unftp-core = "0.1.0"
dashmap = "6.0"
# 类型生成
ts-rs = { version = "10.1", features = ["no-serde-warnings"] }
thiserror = "2.0"
# 网络检测
local-ip-address = "0.6"
# 异步trait
async-trait = "0.1"
# 图像处理（用于托盘图标 + AI修图图片预处理）
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# HEIC/HEIF 解码（纯 Rust，无 C 依赖）
heic = "=0.1.0"
# HTTP client for AI Edit API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Base64 encoding for AI Edit image upload
base64 = "0.22"
# Date/time formatting for AI edit output filenames
chrono = "0.4"
zip = "2"
# Dynamic library loading for RawAlchemyCpp LUT filter
libloading = "0.8"
# SIMD-accelerated byte scanning for embedded JPEG extraction
memchr = "2"
# EXIF 元数据读取 - 使用 nom-exif 支持全格式 (JPG/RAW/CR3/NEF等)
nom-exif = "2.7"
futures = "0.3"

# 密码哈希
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1.8"  # 内存安全：密码使用后自动清零
# FTPS 证书生成
rcgen = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
# 文件系统监听（仅 Windows 使用）
notify = { version = "8.0", default-features = false, features = [] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }

[dev-dependencies]
tempfile = "3.12"
filetime = "0.2"

[profile.release]
# Strip both DWARF debug info AND the symbol table from the release binary.
#
# "debuginfo" alone is a no-op here: Rust's release profile does not emit
# DWARF by default, and the measured saving on libcamera_ftp_companion_lib.so
# was ~2 KB (46,017,856 → 46,015,688 bytes). The real bulk is the .symtab /
# .strtab pair (~5 MB uncompressed on this binary), which only "symbols"
# removes. Measured with "symbols": 46.0 MB → 38.8 MB (saves ~7 MB
# uncompressed, ~2-3 MB inside the compressed APK).
#
# Trade-off: panic backtraces lose function names (file:line is still printed
# via the panic handler's location macro). Acceptable for release — users
# never read Rust backtraces, and the Android native crash handler captures
# its own tombstones independently.
#
# The CMake-built libraw_alchemy_core.so is stripped separately in
# scripts/build-raw-alchemy.sh (Cargo has no control over it).
strip = "symbols"
